@@ -37,6 +37,9 @@ New features added
     the directive -- this allows you to define your document
     structure, but place the links yourself.
 
+  - #52: There is now a ``hlist`` directive, creating a compact
+    list by placing distributing items into multiple columns.
+
   - #77: If a description environment with info field list only
     contains one ``:param:`` entry, no bullet list is generated.
 
